--- a/18_OOP_2_Constructor/18_OOP_2_Constructor.csproj
+++ b/18_OOP_2_Constructor/18_OOP_2_Constructor.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A9788979-5DDD-45E1-993B-47D24A4B23BF}</ProjectGuid>
+    <ProjectGuid>{15430D85-8920-4EFA-837A-F508D69C5F8D}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_15_Metotlar</RootNamespace>
-    <AssemblyName>15_Metotlar</AssemblyName>
+    <RootNamespace>_18_OOP_2_Constructor</RootNamespace>
+    <AssemblyName>18_OOP_2_Constructor</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Matematik.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
